[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bpm-sync-buffer"
version = "0.2.0"
description = "BPM Sync Buffer — Adjustable latency buffer for Daydream Scope. Smooths bursty AI video generation into steady framerate output. Beat-locked and millisecond delay modes with visual fill overlay."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
]
license = { text = "MIT" }
authors = [{ name = "OpticMystic" }]
keywords = ["vj", "vjing", "buffer", "latency", "scope", "daydream", "beat-sync"]

[project.optional-dependencies]
link = ["aalink>=0.2.0"]
midi = ["mido>=1.3.0", "python-rtmidi>=1.5.0"]
dev = ["pytest>=7.0.0"]

[project.entry-points."scope"]
bpm_sync_buffer_vjtools = "bpm_sync_buffer_vjtools.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/bpm_sync_buffer_vjtools"]
